--- a/Image Processing/App/qml.qrc
+++ b/Image Processing/App/qml.qrc
@@ -1,9 +1,10 @@
 <!DOCTYPE RCC>
-<RCC version="1.0">
-    <qresource prefix="/">
-        <file>qml/main.qml</file>
-        <file>qml/home.qml</file>
-        <file>qml/showImage.qml</file>
-        <file>qml/showVideo.qml</file>
-    </qresource>
+<RCC>
+  <qresource prefix="/">
+    <file>qml/main.qml</file>
+    <file>qml/home.qml</file>
+    <file>qml/showImage.qml</file>
+    <file>qml/showVideo.qml</file>
+    <file>qml/logo.png</file>
+  </qresource>
 </RCC>
